return venmo user info with server-side oauth

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
   <title>Roomies</title>
 </head>
 <body>
-  <form action=""></form>
+  <a href="https://api.venmo.com/v1/oauth/authorize?client_id=2373&scope=make_payments%20access_profile%20access_email%20access_phone&response_type=code">Connect with Venmo</a>
 </body>
 </html>
