remove angular and add reactjs

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,7 +55,8 @@
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="libs/underscore/underscore-min.js"></script>
-  <script src="libs/angular/angular.js"></script>
+  <script src="libs/react/react.min.js"></script>
+  <script src="libs/react/JSXTransformer.js"></script>
   <script src="javascripts/main.js"></script>
 
   <!-- Menu Toggle Script -->
