--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,63 +9,18 @@
   <link rel="stylesheet" href="libs/normalize.css/normalize.css">
   <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="libs/animate.css/animate.min.css">
-  <link rel="stylesheet" href="stylesheets/vendor/simple-sidebar.css">
   <link rel="stylesheet" href="stylesheets/style.css">
-
-</head>
-<body ng-app="roomies">
-
-  <div id="wrapper">
-
-    <!-- Sidebar -->
-    <div id="sidebar-wrapper">
-      <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-          <a href="#">
-            roomies
-          </a>
-        </li>
-        <li>
-          <a href="#">my houses</a>
-        </li>
-        <li>
-          <a href="#">my expenses</a>
-        </li>
-        <li>
-          <a href="#">my charges</a>
-        </li>
-      </ul>
-    </div>
-    <!-- /#sidebar-wrapper -->
-
-    <!-- Page Content -->
-    <div id="page-content-wrapper">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12">
-            <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- /#page-content-wrapper -->
-
-  </div>
 
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="libs/underscore/underscore-min.js"></script>
-  <script src="libs/react/react.min.js"></script>
+  <script src="libs/react/react-with-addons.js"></script>
   <script src="libs/react/JSXTransformer.js"></script>
-  <script src="javascripts/main.js"></script>
+</head>
+<body>
 
-  <!-- Menu Toggle Script -->
-  <script>
-  $("#menu-toggle").click(function(e) {
-    e.preventDefault();
-    $("#wrapper").toggleClass("toggled");
-  });
-  </script>
+  <div id="content"></div>
 
+  <script type="text/jsx" src="javascripts/main.js"></script>
 </body>
 </html>
